# fpga-bounce

./: CMakeLists.txt  README.md  main.cpp  simple_480p.sv  top_bounce.sv
cmake/: hdl.cmake
test/: bounce_testcase.cpp  bounce_testcase.h  test.cpp
